--- a/css/hackday.css
+++ b/css/hackday.css
@@ -12,6 +12,11 @@
   text-align: center;
 }
 
+
+#schedule h3, #schedule .time{
+  text-align: center;
+}
+
 .hero-unit {
   border-radius: 1.5em;
 }
@@ -28,7 +33,11 @@
 
 /*bootstrap hacking */
 .container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {
-  width: 1170px;
-}
+  width:    1100px; /* 14 rows */
 
+}
+/*.content {
+  position: relative;
+  top:      80px;
+}*/
 hr { border-width: 3px;}
