--- a/css/hackday.css
+++ b/css/hackday.css
@@ -20,6 +20,13 @@
 #schedule h3 { margin-bottom: 0;}
 #schedule .time { margin-bottom: 1em;}
 
+
+.address {
+  border-radius: 1em;
+  background-color: #ecf0f1;
+  padding: 1em;
+}
+
 .hero-unit {
   border-radius: 1.5em;
 }
